web/app/themes/envisioningjustice/assets/styles/components/_footer.scss
// Footer

footer.site-footer {
  color: $white-dark;
  background: $black;
  padding-bottom: 100px;
  -webkit-font-smoothing: antialiased;
  @include angledEdge(before, $color: $black);

  .slashfield-container {
    .-inner {
      position: relative;
    }
    .slashfield {
      margin-top: -8vw;
    }
  }

  > .container {
    z-index: 1;
    position: relative;
  }


  .content-container {
    padding-left: 0;
    padding-right: 0;
    padding-top: 60px;
    .section {
      padding-top: 0;
      padding-bottom: 0;
    }
    > .grid > .grid-item.-first {
      margin-bottom: 50px;
      @include media-md {
        margin-bottom: 0;
      }
    }
  }

  .social-media-links {
    li {
      margin-left: 40px;
      display: inline-block;
      &:first-of-type {
        margin-left: 0;
      }
    }
  }

  .newsletter-form {
    margin-bottom: 60px;
    h3 {
      margin: 0 0 4px;
    }
    .-bottom {
      display: flex;
    }
    .form-group {
      flex-grow: 1;
      padding-right: 40px;
    }
    .input-wrap {
      &::after {
        background-color: $gray;
      }
    }
    .submit {
      max-width: 50px;
      flex-basis: 50px;
      align-self: flex-end;
    }
  }

  .logos {
    margin-bottom: 15px;
    a {
      display: inline-block;
      svg {
        vertical-align: top;
      }
      &:first-of-type {
        margin-right: 35px;
      }
    }
  }

  .il-humanities-logo {
    width: 123px;
    height: 50px;
  }
  .envisioning-justice-logo {
    height: 40px;
    width: 145px;
    fill: #bcb5b5;
  }

  .site-disclaimer {
    margin: 0;
    max-width: 360px;
    @include type-small;
    @include media-md {
      max-width: none;
      padding-right: 100px;
    }
  }

  .site-contact {
    width: 100%;

    h3 {
      margin: 0 0 $padding;
    }

    h3,
    a {
      color: $white-dark;
    }

    p,
    address {
      margin: 0 0 5px;
      @include type-small;
      span {
        display: block;
        margin-bottom: 5px;
      }
    }

    .-item {
      display: inline-block;
    }

    .site-communication {
      margin-right: 50px;
      margin-bottom: 60px;

      a:hover {
        text-decoration: underline;
      }
    }
  }
}

